# tiny-parsec

./: LICENSE  README.md  TinyParsec.cabal
src/: TinyParsec.hs
