cabal-version:      3.4
name:               TinyParsec
version:            0.1.0.0
synopsis:           n
-- description:
license:            MIT
license-file:       LICENSE
author:             Amr Almorsi
maintainer:         amrfalmorsi@gmail.com
-- copyright:
category:           Parsing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TinyParsec
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
